# abap-treesitter-lsp

./: .gitignore  .talismanrc  CLAUDE.md  README.md  grammar.js  package-lock.json  package.json  test.abap  tree-sitter.json
abap-lsp/: pyproject.toml
abap-lsp/abap_lsp/: __main__.py  completion.py  definition.py  diagnostics.py  hover.py  parser.py  references.py  server.py  symbols.py
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: abap.tmLanguage.json
queries/: folds.scm  highlights.scm  locals.scm  tags.scm
src/: scanner.c
test/: sample_program.abap
test/corpus/: assign_statement.txt  assignments.txt  authority_check.txt  call_function.txt  call_transaction.txt  case_statement.txt  case_type_statement.txt  chained_statements.txt  class_definition.txt  class_implementation.txt  comments.txt  constants_declaration.txt  constructor_expressions.txt  create_object.txt  data_declaration.txt  describe_field.txt  do_while_statement.txt  error_recovery.txt  event_blocks.txt  exit_statements.txt  export_import.txt  expressions.txt  field_symbols_declaration.txt  form_definition.txt  format_statement.txt  function_implementation.txt  identifiers.txt  if_statement.txt  inline_declarations.txt  integration.txt  integration_class.txt  interface_definition.txt  literals.txt  loop_statement.txt  macro_definition.txt  message_statement.txt  method_call.txt  method_declaration.txt  perform_statement.txt  predicate_expressions.txt  (+15 more)
